# gemini-lens

./: .dockerignore  ARCHITECTURE.md  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  settings.py
static/: app.js  index.html  presentation.html  style.css
