[project]
name = "gemini-lens"
version = "0.1.0"
description = "Gemini-Lens: The Interactive Educational Explainer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "google-genai>=0.2.2",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.3",
    "pydantic>=2.7.0",
    "gtts>=2.5.1",
    "pydantic-settings>=2.13.1",
]
